--- a/package.json
+++ b/package.json
@@ -8,16 +8,26 @@
         "codeceptjs:ui": "codecept-ui --app",
         "codeceptjs:demo": "codeceptjs run --steps -c node_modules/@codeceptjs/examples",
         "codeceptjs:demo:headless": "HEADLESS=true codeceptjs run --steps -c node_modules/@codeceptjs/examples",
-        "codeceptjs:demo:ui": "codecept-ui --app  -c node_modules/@codeceptjs/examples"
+        "codeceptjs:demo:ui": "codecept-ui --app  -c node_modules/@codeceptjs/examples",
+        "test": "npx codeceptjs run",
+        "test:parallel": "npx codeceptjs run-workers 3"
     },
     "devDependencies": {
         "@codeceptjs/configure": "^0.10.0",
         "@codeceptjs/examples": "^1.2.1",
         "@codeceptjs/ui": "^0.4.7",
         "@types/node": "^18.11.18",
+        "@typescript-eslint/eslint-plugin": "^5.48.0",
+        "@typescript-eslint/parser": "^5.48.0",
         "codeceptjs": "^3.3.7",
+        "eslint": "^8.31.0",
+        "eslint-plugin-react": "^7.31.11",
         "playwright": "^1.29.1",
+        "prettier": "2.8.1",
         "ts-node": "^10.9.1",
         "typescript": "^4.9.4"
+    },
+    "dependencies": {
+        "codeceptjs-assert": "^0.0.5"
     }
 }
